$Id$

2.0.5-pre-1
	Fix in finding des for building zcrypt
	Fixed description for alert_action variable
	
2.0.4
	Made command line option -n actually work
	Implemented styles, including the 'default' 'basic' and 'oneline'
	  styles.  A 'perl' style is available if a format_msg() function
	  is found in .owlconf
	Added the 'default_style' variable
	Added the 'toggle-oneline' command
	The 'o' key is bound to 'toggle-oneline'
	Internally, the one view now has a name, 'main', and message
	  recalcuations are done in place when its filter is changed.
	Added filter field 'login' which can take the values 'login'
	   'logout' or 'none'
	Added the perl variable $owl::login, just as above
	Updated the 'login' and 'trash' filters appropriately
	Fix for checking for DES in build system
	Bug fix in using makemsg when no curses window is present
	The variable $owl::auth now exists in perl
	Use new internal function to delete zephyr subs from file
	New 'sepbar_disable' variable can turn off sepbar info display
	Updated contributor info
	Added the 'show view' command
	Bug fix in owl_regex
	Fixed personal aim messages logging to class directory
	Log "LOGIN" or "LOGOUT" for AIM buddy messages
	zwrite -m now correctly displays an outgoing message and logs
	zwrite -s now works
	Strip spaces in AIM usernames on aimwrite send
	Removed libfaim/config.log from CVS
	Fixed some easy fixed-length buffers
	Wordwrap incoming AIM messages
	Fixed bug causing buddies not to be added to buddy list during
	  ingorelogin timer
	Translate &lt; &gt; &amp; &quot; &nbsp; &ensp, &emsp, &endash and
	   &emdash
	
2.0.3
	Don't ring the terminal bell on mail messages.
	Nuke <FONT>
	Make the build work a little better on OSX
	Fixed a bug in fmtext
	Expanded the size of the hostname buffer
	
2.0.2
	Fixed bug in 'startup' command.

2.0.1
	Moved newmsgproc stuff to a function procedure
	Added the 'newlinestrip' variable, on by default, that strips
	  leading and trailing newlines from incoming messages.