@@ -3,6 +3,9 @@ $Id$
 2.0.5-pre-1
 	Fix in finding des for building zcrypt
 	Fixed description for alert_action variable
+	More detailed usage from -h
+	Special cased replies for webzephyr users on classes and
+	  login notifications for webzephyr users
 	
 2.0.4
 	Made command line option -n actually work
